add mail api and cloud database

--- a/src/AccountAPI/.env
+++ b/src/AccountAPI/.env
@@ -1,8 +1,6 @@
-DB_NAME=test_authen
-DB_USER=root
-DB_HOST=localhost
+DB_NAME=sql12747061
+DB_USER=sql12747061
+DB_HOST=sql12.freemysqlhosting.net
+DB_PASSWORD=8gIcexB9w3
 SECRET_KEY=thaiha
 PORT=3000
-EMAIL_NAME=ctb.02.thaiha@gmail.com
-APP_PASSWORD=msygfzjbojjoavdr
-URL_SERVER=http://localhost:3000
