--- a/src/AccountAPI/package.json
+++ b/src/AccountAPI/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node source/index.js",
+    "start": "nodemon source/index.js",
     "dev": "nodemon source/index.js"
   },
   "author": "thaiha",
