update spint 1 api

--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -22,10 +22,10 @@
           "Methods": [ "GET", "POST", "PUT", "DELETE" ]
         }
       },
-      "orders_route": {
-        "ClusterId": "orders_cluster",
+      "suggest_route": {
+        "ClusterId": "suggest_cluster",
         "Match": {
-          "Path": "/api/orders/{**catchAll}",
+          "Path": "/api/v1/suggest/{**catchAll}",
           "Methods": [ "GET", "POST", "PUT", "DELETE" ]
         }
       }
@@ -33,18 +33,18 @@
     "Clusters": {
       "accounts_cluster": {
         "Destinations": {
-          "products_service": {
+          "accounts_service": {
             "Address": "http://localhost:7201"
           }
         }
       },
-      "orders_cluster": {
+      "suggest_cluster": {
         "Destinations": {
-          "orders_service": {
-            "Address": "http://localhost:5100"
+          "suggest_service": {
+            "Address": "http://localhost:7202"
           }
         }
-      }
+      } 
     }
   }
 }
