--- a/src/RecommendationAPI/.env
+++ b/src/RecommendationAPI/.env
@@ -3,3 +3,6 @@ DB_USER=sql12747562
 DB_PASSWORD=Bj1tiEP6Za
 DB_NAME=sql12747562
 DB_PORT=3306
+PORT=7202
+DEFAULT_VERSION=/api/v1/suggest/
+SECRET_KEY=ITSS123
