--- a/src/AccountAPI/.env
+++ b/src/AccountAPI/.env
@@ -2,5 +2,5 @@ DB_NAME=sql12747061
 DB_USER=sql12747061
 DB_HOST=sql12.freemysqlhosting.net
 DB_PASSWORD=8gIcexB9w3
-SECRET_KEY=thaiha
+SECRET_KEY=ITSS123
 PORT=7201
