Sprint 2 be finished

--- a/src/RestaurantDishAPI/.env
+++ b/src/RestaurantDishAPI/.env
@@ -3,5 +3,6 @@ DB_USER=root
 DB_PASSWORD=nducanh210503
 DB_NAME=eatround
 DB_PORT=3306
+PORT=7203
+DEFAULT_VERSION=/api/v1/
 SECRET_KEY=ITSS123
-PORT=7201
