--- a/src/RestaurantDishAPI/package.json
+++ b/src/RestaurantDishAPI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recommendationapi",
+  "name": "restaurantdishapi",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-jwt": "^8.4.1",
-    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "nodemon": "^3.1.7",
     "sequelize": "^6.37.5"
